update swagger and add groups routes
