# routes/index.js
@@ -6,5 +6,6 @@ router.get('/', (req, res) => {
 });
 
 router.use('/users', require('./users'));
+router.use('/groups', require('./groups'));
 
 module.exports = router;
